# trans-trainer

./: .gitignore  Gradio_demo.py  README.md  caption_obj_test.py  caption_test.py  constants.py  pyproject.toml  requirements.txt  train.py
base/mplug_owl2.egg-info/: PKG-INFO
base/mplug_owl2/model/: visual_encoder.py
base/mplug_owl2/train/: train.py
custom/dataset/: custom_datasets.py
custom/train/: train.py
dataset/: common.py  custom_datasets.py  datasets.py  msrvtt_preprocess.py  preprocess.py  process_bddx.py
dataset/preprocess/: process_bddx.py  process_drama.py
dataset/processor/: ImageCaption_processor.py
eval/: compute_metric.py  custom_compute_metric.py
eval/object_detection/: eval.py
flagged/: log.csv
model/: build.py  configuration_custom_model.py  configuration_model.py  custom_model.py  loss.py  modeling.py  modeling_abstractor.py  modeling_custom.py  modeling_modules.py  modeling_multitask.py  modeling_pos.py  modeling_transformer.py
mplug_owl2.egg-info/: SOURCES.txt
mplug_owl2/evaluate/: custom.py
scripts/: dstrain.sh  train.sh
server/: Gradio_demo.py
test/: caption_test.py
tokenizer/: tokenizer.py
train/: custom_model_trainner.py  model_trainner.py  train.py
utils/: bbox.py  registry.py
