[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trans-trainer"
version = "1.0.0"
description = "trans-trainer"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.3.1", "torchvision==0.18.1",
    "transformers==4.42.3", "fvcore==0.1.5.post20221221",
    "icecream==2.1.3", "numpy==2.0.0", "peft==0.11.1"
]

[project.optional-dependencies]
train = ["deepspeed==0.9.5", "ninja", "wandb"]